fix ribbon spacing within ibm-related-content section

--- a/css/scss/beta/_adaptive.scss
+++ b/css/scss/beta/_adaptive.scss
@@ -611,10 +611,6 @@ a.ibm-thumbnail-module h3 {
 		padding: 0 10px;
 	}
 	// ribbon column adjust jeff
-
-	.ibm-landing-page #ibm-related-content .ibm-ribbon-section {
-		margin-left: -30px;
-	}
 	
 	// thumbnail module section 4-1
 	.ibm-col-4-1 .ibm-thumbnail-module {
@@ -890,8 +886,7 @@ a.ibm-thumbnail-module h3 {
 		margin: 10px 64px;
 	}
 	
-	.ibm-landing-page #ibm-content .ibm-ribbon .ibm-columns,
-	.ibm-landing-page #ibm-related-content .ibm-ribbon .ibm-columns {
+	.ibm-landing-page #ibm-content .ibm-ribbon .ibm-columns {
 		padding: 0 10px;
 	}
 
